# crawler-promos

./: .gitignore  .pre-commit-config.yaml  DEAL.md  README.md  README.rst  pyproject.toml  setup.cfg
adrenaline/: output.json
adrenaline/adrenaline/: middlewares.py  settings.py
adrenaline/adrenaline/spiders/: adrenaline_for_sale.py
hardmob_promocoes/: scrapy.cfg
hardmob_promocoes/hardmob_promocoes/: items.py  middlewares.py  pipelines.py  settings.py
hardmob_promocoes/hardmob_promocoes/spiders/: hardmob.py
pelando/: output.json  scrapy.cfg
pelando/pelando/: items.py  middlewares.py  pipelines.py  settings.py
pelando/pelando/spiders/: pelando_spider.py
promo_crawler/: adrenaline.jl  hardmob.jl  scrapy.cfg
promo_crawler/promo_crawler/: items.py  middlewares.py  pipelines.py  settings.py
promo_crawler/promo_crawler/spiders/: adrenaline_spider.py  hardmob_spider.py  pelando_featured.py  pelando_recent.py
tests/: test_promo_crawler.py
